--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==4.0.0
 click==7.1.2
 cycler==0.10.0
 distlib==0.3.1
+dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.2
 django-autoslug==1.9.8
